avoid button scrollbar using time of gsap animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
+  /* avoid the button scrollbar using time of gsap animation */
+  overflow-x: hidden;
 }
 
 @layer utilities {
